--- a/package.json
+++ b/package.json
@@ -6,17 +6,42 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-player": "^2.9.0",
+    "react-slick": "^0.28.1",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@storybook/addon-actions": "^6.4.0-beta.13",
+    "@storybook/addon-essentials": "^6.4.0-beta.13",
+    "@storybook/addon-links": "^6.4.0-beta.13",
+    "@storybook/react": "^6.4.0-beta.13",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "@types/react": "17.0.30",
-    "eslint": "8.0.1",
+    "@types/react-slick": "^0.23.6",
+    "@types/styled-components": "^5.1.15",
+    "babel-jest": "^27.3.0",
+    "babel-loader": "^8.2.2",
+    "eslint": "7.24.0",
     "eslint-config-next": "11.1.2",
+    "eslint-config-prettier": "^8.3.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.3.0",
+    "prettier": "^2.4.1",
+    "react-test-renderer": "^17.0.2",
+    "themeprovider-storybook": "^1.7.2",
     "typescript": "4.4.4"
   }
 }
