--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest --watch",
+    "test:ci": "jest",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
