--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@storybook/react": "^6.4.0-beta.13",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "17.0.30",
     "@types/react-slick": "^0.23.6",
@@ -40,6 +41,7 @@
     "eslint-config-prettier": "^8.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.0",
+    "next-router-mock": "^0.5.3",
     "prettier": "^2.4.1",
     "react-test-renderer": "^17.0.2",
     "themeprovider-storybook": "^1.7.2",
