--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/google.analytics": "^0.0.42",
+    "@types/gtag.js": "^0.0.7",
     "@types/react": "17.0.30",
     "@types/react-slick": "^0.23.6",
     "@types/styled-components": "^5.1.15",
