E2E tests and src refactor

--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint",
     "test": "jest --watch",
     "test:ci": "jest",
+    "cypress": "cypress open",
+    "cypress:headless": "cypress run",
+    "e2e": "start-server-and-test start http://localhost:3000 cypress",
+    "e2e:headless": "start-server-and-test start http://localhost:3000 cypress:headless",
+    "deploy": "npm run test:ci && npm run build && npm run e2e:headless",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -27,6 +32,7 @@
     "@storybook/addon-essentials": "^6.4.0-beta.13",
     "@storybook/addon-links": "^6.4.0-beta.13",
     "@storybook/react": "^6.4.0-beta.13",
+    "@testing-library/cypress": "^8.0.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^7.0.2",
@@ -38,14 +44,17 @@
     "@types/styled-components": "^5.1.15",
     "babel-jest": "^27.3.0",
     "babel-loader": "^8.2.2",
+    "cypress": "^8.6.0",
     "eslint": "7.24.0",
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.3.0",
     "next-router-mock": "^0.5.3",
     "prettier": "^2.4.1",
     "react-test-renderer": "^17.0.2",
+    "start-server-and-test": "^1.14.0",
     "themeprovider-storybook": "^1.7.2",
     "typescript": "4.4.4"
   }
