--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "next": "11.1.2",
+    "next": "11.1.3-canary.41",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
@@ -46,7 +46,7 @@
     "babel-loader": "^8.2.2",
     "cypress": "^8.6.0",
     "eslint": "7.24.0",
-    "eslint-config-next": "11.1.2",
+    "eslint-config-next": "11.1.3-canary.41",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-cypress": "^2.12.1",
     "identity-obj-proxy": "^3.0.0",
