--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,9 @@ jobs:
     environment: production
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v20
         with:
