--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to Vercel
 
 on:
   workflow_run:
-    workflows: ["Unit tests", "E2E tests"]
+    workflows: ["Tests"]
     branches: [main]
     types: 
       - completed
