--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,11 +1,11 @@
-name: Unit tests
+name: Tests
 
 on: 
   push:
     branches: [main]
 
 jobs:
-  run-tests:
+  unit-tests:
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -30,3 +30,17 @@ jobs:
 
       - name: Unit tests
         run: npm run test:ci
+
+  e2e-tests:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: E2E tests
+        uses: cypress-io/github-action@v2
+        with:
+          build: npm run build
+          start: npm run start
+          wait-on: http://localhost:3000
